--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,8 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "es2015",
-    "target": "esnext",
-    "types": [],
+    "module": "es6",
+    "target": "es6",
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
