--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "lite-server --baseDir=./dist",
-    "build": "tsc"
+    "build": "tsc",
+    "sass": "sass --watch src/scss:dist/main.css"
   }
 }
 
